clusters/k3s/demo.yaml
---
# Source: helm/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: demo
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
---
# Source: helm/charts/redis/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: demo-redis
  namespace: "demo"
  labels:
    app.kubernetes.io/instance: demo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.4.0
    helm.sh/chart: redis-20.1.3
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: demo
      app.kubernetes.io/name: redis
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    # Allow inbound connections
    - ports:
        - port: 6379
---
# Source: helm/charts/api-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: ambassador
  name: ambassador
  namespace: demo
spec:
  type: NodePort
  ports:
  - name: ambassador-http
    port: 80
    targetPort: 80
  selector:
    service: ambassador
---
# Source: helm/charts/api-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: ambassador-admin
  name: ambassador-admin
  namespace: demo
spec:
  type: ClusterIP
  ports:
  - name: ambassador-admin
    port: 8877
    targetPort: 8877
  selector:
    service: ambassador
---
# Source: helm/charts/mysql/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-mysql
  namespace: demo
  labels:
    app: demo-mysql
spec:
  ports:
  - name: tcp-mysql
    port: 3306
    targetPort: 3306
  selector:
    app: demo-mysql
---
# Source: helm/charts/nats/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nats
  namespace: demo
  labels:
    helm.sh/chart: nats-0.18.0
    app.kubernetes.io/name: nats
    app.kubernetes.io/instance: demo
    app.kubernetes.io/version: "2.9.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: nats
    app.kubernetes.io/instance: demo
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - name: client
    port: 4222
    appProtocol: tcp
  - name: cluster
    port: 6222
    appProtocol: tcp
  - name: monitor
    port: 8222
    appProtocol: http
  - name: metrics
    port: 7777
    appProtocol: http
  - name: leafnodes
    port: 7422
    appProtocol: tcp
  - name: gateways
    port: 7522
    appProtocol: tcp
---
# Source: helm/charts/redis/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-redis-headless
  namespace: "demo"
  labels:
    app.kubernetes.io/instance: demo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.4.0
    helm.sh/chart: redis-20.1.3
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/instance: demo
    app.kubernetes.io/name: redis
---
# Source: helm/charts/redis/templates/master/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-redis-master
  namespace: "demo"
  labels:
    app.kubernetes.io/instance: demo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.4.0
    helm.sh/chart: redis-20.1.3
    app.kubernetes.io/component: master
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
      nodePort: null
  selector:
    app.kubernetes.io/instance: demo
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: master
---
# Source: helm/templates/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  namespace: demo
  labels:
    app: api
    version: v4
  annotations:
    
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind:  Mapping
      name:  demo-api-api
      prefix: /
      service: demo-api
      
        
      
       
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: demo-api
---
# Source: helm/templates/ascii-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-ascii
  namespace: demo
  labels:
    app: ascii
    version: v4
  annotations:
   getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind:  Mapping
      name:  demo-ascii
      prefix: /ascii/
      service: demo-ascii
      
        
      
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: demo-ascii
---
# Source: helm/templates/data-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-data
  namespace: demo
  labels:
    app: data
    version: v4 
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: demo-data
---
# Source: helm/templates/img-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-img
  namespace: demo
  labels:
    app: img
    version: v4
  annotations:
   getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind:  Mapping
      name:  demo-img
      prefix: /img/
      service: demo-img
      
        
      
spec:      
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: demo-img
---
# Source: helm/charts/api-gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ambassador
  namespace: demo
spec:
  selector:
    matchLabels:
      service: ambassador
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        service: ambassador
    spec:
      serviceAccountName: ambassador
      containers:
      - name: ambassador
        image: quay.io/datawire/ambassador:0.51.2
        resources:
          limits:
            cpu: 500m
            memory: 400Mi
          requests:
            cpu: 200m
            memory: 200Mi
        livenessProbe:
          httpGet:
            path: /ambassador/v0/check_alive
            port: 8877
          initialDelaySeconds: 30
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /ambassador/v0/check_ready
            port: 8877
          initialDelaySeconds: 30
          periodSeconds: 3
---
# Source: helm/charts/mysql/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-mysql
  namespace: demo
  labels:
    service: demo-mysql
spec:
  selector:
    matchLabels:
      app: demo-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-mysql
    spec:
      containers:
      - name: mysql
        image: mysql  # or just image: percona
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 3306
---
# Source: helm/charts/nats/templates/nats-box.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nats-box
  namespace: demo
  labels:
    app: demo-nats-box
    chart: nats-0.18.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-nats-box
  template:
    metadata:
      labels:
        app: demo-nats-box
    spec:
      volumes:
      containers:
      - name: nats-box
        image: natsio/nats-box:0.13.0
        imagePullPolicy: IfNotPresent
        resources:
          null
        command:
        - "tail"
        - "-f"
        - "/dev/null"
        volumeMounts:
---
# Source: helm/templates/api-deploy.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: demo-api
  namespace: demo
  labels:
    version: v4
spec:
  selector:
    matchLabels:
      app: demo-api
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-api
        version: v4
    spec:
      containers:
      - name: api
        image: denvasyliev/k8sdiy:build-b1ee187
        command:
          - ./app
          - "-role"
          - "api"
          - "-server"
          - demo-nats
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
          name: http
        securityContext:
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /readinez
            port: 8080
          initialDelaySeconds: 0
          periodSeconds: 3
---
# Source: helm/templates/ascii-deploy.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: demo-ascii
  namespace: demo
  labels:
    version: v4
spec:
  selector:
    matchLabels:
      app: demo-ascii
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-ascii
        version: v4
    spec:
      containers:
      - name: ascii
        image: denvasyliev/k8sdiy:build-b1ee187
        command:
          - ./app
          - "-role"
          - "ascii"
          - "-server"
          - demo-nats
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
          name: http
        securityContext:
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /readinez
            port: 8080
          periodSeconds: 3
---
# Source: helm/templates/data-deploy.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: demo-data
  namespace: demo
  labels:
    version: v4
spec:
  selector:
    matchLabels:
      app: demo-data
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-data
        version: v4
    spec:
      containers:
      - name: data
        image: denvasyliev/k8sdiy:build-b1ee187
        command:
          - ./app
          - "-role"
          - "data"
          - "-server"
          - demo-nats
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
        name: data
        securityContext:
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /readinez
            port: 8080
          initialDelaySeconds: 0
          periodSeconds: 3
